fix(media-item): media-title top is 64, media-icicon gap is 32

--- a/benefits/static/css/styles.css
+++ b/benefits/static/css/styles.css
@@ -562,8 +562,8 @@ footer .footer-links li a:visited {
   :root {
     --media-item-icon-size: calc(90rem / 16);
     --media-item-gap: calc(24rem / 16);
-    --media-item-icon-margin: calc(64rem / 16);
-    --media-title-margin-top: calc(32rem / 16);
+    --media-item-icon-margin: calc(32rem / 16);
+    --media-title-margin-top: calc(64rem / 16);
   }
 }
 
